--- a/.env-sample
+++ b/.env-sample
@@ -8,3 +8,11 @@ DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
+
+
+# Email configaration
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+DEFAULT_FROM_EMAIL = 'foodOnline Marketplace <username@email.com>'
